P4/S3/router_usuaris/iptables.up.rules
# Generated by xtables-save v1.8.2 on Fri Jun 12 19:04:44 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
#DNS
-A FORWARD -p udp --dport 53 -d 10.10.1.3,10.10.1.4 -j ACCEPT
-A FORWARD -p udp --sport 53 -s 10.10.1.3,10.10.1.4 -j ACCEPT

-A OUTPUT -p udp -d 10.10.1.3,10.10.1.4 --dport 53 -o enp0s9 -j ACCEPT
-A INPUT -p udp -s 10.10.1.3,10.10.1.4 --sport 53 -i enp0s9 -j ACCEPT
-A OUTPUT -p tcp -d 10.10.1.3,10.10.1.4 --dport 53 -o enp0s9 -j ACCEPT
-A INPUT -p tcp -s 10.10.1.3,10.10.1.4 --sport 53 -i enp0s9 -j ACCEPT

#ICMP
-A FORWARD -d 10.10.1.0/28,10.10.2.0/28,10.10.3.0/30,10.10.4.0/28,10.10.5.0/28 -p icmp -j ACCEPT
-A FORWARD -s 10.10.1.0/28,10.10.2.0/28,10.10.3.0/30,10.10.4.0/28,10.10.5.0/28 -p icmp -j ACCEPT
-A INPUT -d 10.10.1.2,10.10.4.1,10.10.3.1 -p icmp -j ACCEPT
-A OUTPUT -s 10.10.1.2,10.10.4.1,10.10.3.1 -p icmp -j ACCEPT
#DHCP
-A INPUT -p udp --dport 67 -j ACCEPT
-A OUTPUT -p udp --sport 67 -j ACCEPT
-A FORWARD -p udp -s 0.0.0.0 -d 255.255.255.255 --dport 67 -j ACCEPT
-A FORWARD -p udp -s 10.10.5.2 --sport 67 -d 0.0.0.0/0 -j ACCEPT

#SSH des de admin
-A INPUT -p tcp --dport 22 -s 10.10.2.0/28 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 22 -d 10.10.2.0/28 -m state --state ESTABLISHED -j ACCEPT

#SSH monitor de xarxa
-A INPUT -p tcp --dport 22 -s 10.10.1.11,10.10.4.11 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 22 -d 10.10.1.11,10.10.4.11 -m state --state ESTABLISHED -j ACCEPT

COMMIT
# Completed on Fri Jun 12 19:04:44 2020
